--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-test-starter",
+  "name": "sql-evaluation-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
