--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.1",
+    "dotenv": "^8.2.0",
     "jest-cli": "^23.4.2",
-    "jest-json-reporter": "^1.2.2"
+    "jest-json-reporter": "^1.2.2",
+    "keyv": "^4.0.0",
+    "keyv-file": "^0.1.13",
+    "sequelize": "^5.21.7"
   },
   "devDependencies": {
     "babel-plugin-react-html-attrs": "^2.1.0",
